# irik

./: .gitignore  README.md  package.xml  requirements.txt  script  setup.py
src/drone_control_pkg/communication/: mavlink_bridge_node.py
src/drone_control_pkg/flight_control/: flight_controller_node.py
src/drone_control_pkg/navigation/: waypoint_navigator_node.py
src/launch/: full_system_launch.py
