<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypeset="schematron"?>
<package format="3">
  <name>drone_control_pkg</name>
  <version>0.1.0</version>
  <description>ROS2 Python algorithms for autonomous drone control</description>
  <maintainer email="naseriniaa@gmail.com">Irik</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>px4_msgs</depend>
  <depend>tf2_ros</depend>
  
  <test_depend>pytest</test_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
